# crossplane-k8s-xrd-

./: .gitignore  README.md  Tiltfile
app/: Dockerfile  pyproject.toml
crossplane/crossplane-system/: kustomization.yaml
crossplane/fastapi-xrd/: claim.yaml  composition.yaml  definition.yaml
crossplane/k8s-provider/: k8s-provider.yaml  kustomization.yaml
deploy/app/: claim.yaml  kustomization.yaml
deploy/argocd/: kustomization.yaml
deploy/crossplane/fastapi-xrd/: composition.yaml  definition.yaml
