[tool.poetry]
name = "webapi"
version = "0.1.0"
description = "simple webapi to play around with crossplane"
authors = ["Dani Wold Kristiansen <dani.wold.kristiansen@intility.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
